[gd_scene load_steps=3 format=3 uid="uid://bagr3rxpgympt"]

[ext_resource type="Script" path="res://common/scenes/speech_dialog/speech_dialog.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b8ekuioooned7" path="res://common/scenes/speech_dialog/dialog_box.png" id="2"]

[node name="SpeechDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
mouse_filter = 1
script = ExtResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -138.0
offset_right = -10.0
offset_bottom = -10.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
expand_mode = 1

[node name="NinePatchRect" type="NinePatchRect" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0
texture = ExtResource("2")
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64
patch_margin_bottom = 64

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/NinePatchRect"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 22.0
offset_right = -5.0
offset_bottom = -5.0
mouse_filter = 2

[node name="Text" type="RichTextLabel" parent="HBoxContainer/NinePatchRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
bbcode_enabled = true

[node name="Name" type="Label" parent="HBoxContainer/NinePatchRect"]
layout_mode = 0
offset_left = 47.0
offset_top = -32.0
offset_right = 205.0
offset_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/NinePatchRect/Name"]
show_behind_parent = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0

[node name="NinePatchRect" type="NinePatchRect" parent="HBoxContainer/NinePatchRect/Name/MarginContainer"]
show_behind_parent = true
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
texture = ExtResource("2")
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="Buttons" type="VBoxContainer" parent="HBoxContainer/NinePatchRect"]
visible = false
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -207.0
offset_top = -104.0
offset_right = -20.0
offset_bottom = 26.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 9
size_flags_vertical = 9
theme_override_constants/separation = 2

[node name="Yes" type="Label" parent="HBoxContainer/NinePatchRect/Buttons"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 9
size_flags_vertical = 9
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../No")
focus_next = NodePath("../No")
focus_previous = NodePath(".")
focus_mode = 2
mouse_filter = 0
theme_override_font_sizes/font_size = 36
text = "DIALOG_YES"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/NinePatchRect/Buttons/Yes"]
show_behind_parent = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="NinePatchRect" type="NinePatchRect" parent="HBoxContainer/NinePatchRect/Buttons/Yes/MarginContainer"]
show_behind_parent = true
layout_mode = 2
texture = ExtResource("2")
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="No" type="Label" parent="HBoxContainer/NinePatchRect/Buttons"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 9
size_flags_vertical = 9
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../Yes")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath("../Yes")
focus_mode = 2
mouse_filter = 0
theme_override_font_sizes/font_size = 36
text = "DIALOG_NO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/NinePatchRect/Buttons/No"]
show_behind_parent = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2

[node name="NinePatchRect" type="NinePatchRect" parent="HBoxContainer/NinePatchRect/Buttons/No/MarginContainer"]
show_behind_parent = true
layout_mode = 2
texture = ExtResource("2")
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="Range" type="SpinBox" parent="HBoxContainer/NinePatchRect"]
visible = false
custom_minimum_size = Vector2(150, 40)
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -153.0
offset_top = -40.0
offset_right = -3.0

[node name="NinePatchRect" type="NinePatchRect" parent="HBoxContainer/NinePatchRect/Range"]
show_behind_parent = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2")

[connection signal="gui_input" from="HBoxContainer/NinePatchRect" to="." method="_click_input"]
[connection signal="focus_entered" from="HBoxContainer/NinePatchRect/Buttons/Yes" to="." method="_on_focus_entered" binds= ["HBoxContainer/NinePatchRect/Buttons/Yes/MarginContainer/NinePatchRect"]]
[connection signal="focus_exited" from="HBoxContainer/NinePatchRect/Buttons/Yes" to="." method="_on_focus_exited" binds= ["HBoxContainer/NinePatchRect/Buttons/Yes/MarginContainer/NinePatchRect"]]
[connection signal="gui_input" from="HBoxContainer/NinePatchRect/Buttons/Yes" to="." method="_click_input"]
[connection signal="mouse_entered" from="HBoxContainer/NinePatchRect/Buttons/Yes" to="." method="_on_mouse_entered" binds= ["HBoxContainer/NinePatchRect/Buttons/Yes/MarginContainer/NinePatchRect"]]
[connection signal="mouse_exited" from="HBoxContainer/NinePatchRect/Buttons/Yes" to="." method="_on_mouse_exited" binds= ["HBoxContainer/NinePatchRect/Buttons/Yes"]]
[connection signal="focus_entered" from="HBoxContainer/NinePatchRect/Buttons/No" to="." method="_on_focus_entered" binds= ["HBoxContainer/NinePatchRect/Buttons/No/MarginContainer/NinePatchRect"]]
[connection signal="focus_exited" from="HBoxContainer/NinePatchRect/Buttons/No" to="." method="_on_focus_exited" binds= ["HBoxContainer/NinePatchRect/Buttons/No/MarginContainer/NinePatchRect"]]
[connection signal="gui_input" from="HBoxContainer/NinePatchRect/Buttons/No" to="." method="_click_input"]
[connection signal="mouse_entered" from="HBoxContainer/NinePatchRect/Buttons/No" to="." method="_on_mouse_entered" binds= ["HBoxContainer/NinePatchRect/Buttons/No/MarginContainer/NinePatchRect"]]
[connection signal="mouse_exited" from="HBoxContainer/NinePatchRect/Buttons/No" to="." method="_on_mouse_exited" binds= ["HBoxContainer/NinePatchRect/Buttons/No"]]
